--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
         <div id="logo">
             The logo comes here!!
         </div>
-        <div id="navigation-bar"></div>
+        <div id="navigation-bar">
+            <ul class="navigation-options">
+                <li>Home</li>
+                <li>Watchlist</li>
+                <li>My account</li>
+                <li>Parameters</li>
+                <li>Disconnect</li>
+            </ul>
+        </div>
+        <div id="search-bar">
+            Search bar comes here!
+        </div>
     </div>
 
-    <div id="content"></div>
+    <div id="content">
+    </div>
 </div>
 </body>
 </html>
