Router seems not to load...

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <script data-main="source/umovie" src="source/libs/require.js"></script>
+    <script data-main="js/main" src="js/lib/require.js"></script>
 </head>
 <body>
 <div id="container">
