--- a/index.html
+++ b/index.html
@@ -11,23 +11,7 @@
 <body>
 <div id="container">
 
-    <div id="logo">
-        The logo comes here!!
-    </div>
-    <div id="menu">
-        <div id="navigation-bar">
-            <ul class="navigation-options">
-                <li>Home</li>
-                <li>Watchlist</li>
-                <li>My account</li>
-                <li>Parameters</li>
-                <li>Disconnect</li>
-            </ul>
-        </div>
-    </div>
-    <div id="search-bar">
-        Search bar comes here!
-    </div>
+    <div id="menu-content"></div>
 
     <div id="content">
     </div>
