--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div id="container">
 
     <div id="menu-content"></div>
-    <div id="content">
-    </div>
+    <div id="content"></div>
+    <div id="modal-popup"></div>
 </div>
 </body>
 </html>
