Adds svg icon and start working on the hamburger

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
 <div id="container">
 
+    <div class="header">
+        <button class="hamburger"><img src="img/hamburger_menu.svg"/></button>
+        <button class="cross"><img data="img/cross_menu.svg"/></button>
+    </div>
     <div id="menu-content"></div>
     <div id="content">
     </div>
