Adds mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <button class="hamburger"><img src="img/hamburger_menu.svg"/></button>
         <button class="cross"><img data="img/cross_menu.svg"/></button>
     </div>
-    <div id="menu-content"></div>
+    <div id="menu-content">
+    </div>
     <div id="content">
     </div>
 </div>
+    <script type="text/javascript" charset="utf-8" data-main="js/animations" src="js/animations/homepageMenuBar.js"></script>
 </body>
 </html>
