--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/actorCss.css" type="text/css">
+    <link href="css/watchlistStyle.css" rel="stylesheet">
 
     <script data-main="js/main" src="js/lib/require.js"></script>
 </head>
