mobile page donne

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/movieAndTvShow.css" type="text/css">
     <link rel="stylesheet" href="css/actorCss.css" type="text/css">
 
     <script data-main="js/main" src="js/lib/require.js"></script>
