setting up tvShow page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="css/movieAndTvShow.css" type="text/css">
     <link rel="stylesheet" href="css/actorCss.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
+    <link rel="stylesheet" href="css/accordeon.css">
+
+
 
     <script data-main="js/main" src="js/lib/require.js"></script>
+    <script src="js/utils/accordeon.js"></script>
 </head>
 <body>
 <div id="container">
