--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <!--link rel="stylesheet" href="css/movieAndTvShow.css" type="text/css"-->
+    <link rel="stylesheet" href="css/movie.css" type="text/css">
     <link rel="stylesheet" href="css/actorCss.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
