--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/movie.css" type="text/css">
     <link rel="stylesheet" href="css/tvShow.css" type="text/css">
-    <link rel="stylesheet" href="css/actorCss.css" type="text/css">
+    <link rel="stylesheet" href="css/actor.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
     <link rel="stylesheet" href="css/accordeon.css">
