Changes the name of the watchlist css file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/tvShow.css" type="text/css">
     <link rel="stylesheet" href="css/actorCss.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
-    <link rel="stylesheet" href="css/watchlistStyle.css">
+    <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
     <script data-main="js/main" src="js/lib/require.js"></script>
