--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/actor.css" type="text/css">
     <link rel="stylesheet" href="css/actors.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
-    <link rel="stylesheet" href="css/watchlistStyle.css">
+    <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
     <script data-main="js/main" src="js/lib/require.js"></script>
