--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/movie.css" type="text/css">
     <link rel="stylesheet" href="css/tvShow.css" type="text/css">
     <link rel="stylesheet" href="css/actor.css" type="text/css">
+    <link rel="stylesheet" href="css/actors.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
     <link rel="stylesheet" href="css/accordeon.css">
