starting creation of the call to modify user info

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/movies.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
     <link rel="stylesheet" href="css/accordeon.css">
+    <link rel="stylesheet" href="css/userSettings.css">
+
 
     <script data-main="js/main" src="js/lib/require.js"></script>
     <script src="js/utils/accordeon.js"></script>
