--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/movie.css" type="text/css">
+    <!--<link rel="stylesheet" href="css/movie.css" type="text/css">-->
     <link rel="stylesheet" href="css/tvShow.css" type="text/css">
     <link rel="stylesheet" href="css/episodes.css" type="text/css">
     <link rel="stylesheet" href="css/actor.css" type="text/css">
     <link rel="stylesheet" href="css/actors.css" type="text/css">
     <link rel="stylesheet" href="css/movies.css" type="text/css">
+    <link rel="stylesheet" href="css/singleMoviePage.css" type="text/css">
     <link rel="stylesheet" href="css/watchlistStyle.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
