Adds favicon to the website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script data-main="js/main" src="js/lib/require.js"></script>
     <script src="js/utils/accordeon.js"></script>
 </head>
