--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/movie-season.css" type="text/css">
-    <link rel="stylesheet" href="css/movies-seasons.css" type="text/css">
-    <link rel="stylesheet" href="css/episodes.css" type="text/css">
+    <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
+    <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/actor.css" type="text/css">
-    <link rel="stylesheet" href="css/actors.css" type="text/css">
+    <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
