mergin' to refactor

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/movie.css" type="text/css">
-    <link rel="stylesheet" href="css/tvShow.css" type="text/css">
+    <link rel="stylesheet" href="css/movie-season.css" type="text/css">
+    <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
+    <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/actor.css" type="text/css">
-    <link rel="stylesheet" href="css/actors.css" type="text/css">
-    <link rel="stylesheet" href="css/movies.css" type="text/css">
-    <link rel="stylesheet" href="css/watchlistStyle.css">
+    <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
+    <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
 
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script data-main="js/main" src="js/lib/require.js"></script>
     <script src="js/utils/accordeon.js"></script>
 </head>
