Add css for the modal page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/movie-season.css" type="text/css">
     <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
+    <link rel="stylesheet" href="css/episode.css" type="text/css">
     <link rel="stylesheet" href="css/actor.css" type="text/css">
     <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/watchlist.css">
