--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>UMovie</title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/navigation-bar.css">
+    <link rel="stylesheet" href="css/login-page.css" >
+    <link rel="stylesheet" href="css/general-content.css" type="text/css">
     <link rel="stylesheet" href="css/movie-season.css" type="text/css">
     <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
