Minor refactor on search display and colors

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
     <link rel="stylesheet" href="css/userSettings.css">
+    <link rel="stylesheet" href="css/search-results.css">
 
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
