Affichage des categorie

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="css/accordeon.css">
     <link rel="stylesheet" href="css/userSettings.css">
     <link rel="stylesheet" href="css/search-results.css">
+    <link rel="stylesheet" href="css/genre.css">
+
+
 
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
