Renames the user settings css file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
     <link rel="stylesheet" href="css/watchlist.css">
     <link rel="stylesheet" href="css/accordeon.css">
-    <link rel="stylesheet" href="css/userSettings.css">
+    <link rel="stylesheet" href="css/user-settings.css">
 
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
