refactoring member to user for it caused major probles in research

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/accordeon.css">
     <link rel="stylesheet" href="css/search-results.css">
     <link rel="stylesheet" href="css/genre.css">
-    <link rel="stylesheet" href="css/user-settings.css">
+    <link rel="stylesheet" href="css/user-session.css">
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script data-main="js/main" src="js/lib/require.js"></script>
