--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>UMovie</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>UMovie</title>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/navigation-bar.css">
-    <link rel="stylesheet" href="css/login-page.css" >
-    <link rel="stylesheet" href="css/general-content.css" type="text/css">
-    <link rel="stylesheet" href="css/movie-season.css" type="text/css">
-    <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
-    <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
-    <link rel="stylesheet" href="css/episode.css" type="text/css">
-    <link rel="stylesheet" href="css/actor.css" type="text/css">
-    <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
-    <link rel="stylesheet" href="css/watchlist.css">
-    <link rel="stylesheet" href="css/accordeon.css">
-    <link rel="stylesheet" href="css/search-results.css">
-    <link rel="stylesheet" href="css/genre.css">
-    <link rel="stylesheet" href="css/user-session.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="css/navigation-bar.css">
+        <link rel="stylesheet" href="css/login-page.css">
+        <link rel="stylesheet" href="css/team-page.css" >
+        <link rel="stylesheet" href="css/general-content.css" type="text/css">
+        <link rel="stylesheet" href="css/movie-season.css" type="text/css">
+        <link rel="stylesheet" href="css/movies-seasons-thumbnail.css" type="text/css">
+        <link rel="stylesheet" href="css/episodes-thumbnail.css" type="text/css">
+        <link rel="stylesheet" href="css/episode.css" type="text/css">
+        <link rel="stylesheet" href="css/actor.css" type="text/css">
+        <link rel="stylesheet" href="css/actors-thumbnail.css" type="text/css">
+        <link rel="stylesheet" href="css/watchlist.css">
+        <link rel="stylesheet" href="css/accordeon.css">
+        <link rel="stylesheet" href="css/search-results.css">
+        <link rel="stylesheet" href="css/genre.css">
+        <link rel="stylesheet" href="css/user-session.css">
 
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
-    <script data-main="js/main" src="js/lib/require.js"></script>
-</head>
-<body>
-<div id="container">
-    <div id="menu-content">
-    </div>
-    <div id="content">
-    </div>
-    <div id="modal-popup"></div>
-</div>
-</body>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+        <script data-main="js/main" src="js/lib/require.js"></script>
+    </head>
+    <body>
+        <div id="container">
+            <div id="menu-content"></div>
+            <div id="content"></div>
+            <div id="modal-popup"></div>
+        </div>
+    </body>
 </html>
